# home_assignment

./: .gitignore  Makefile  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/api/routers/: application.py
app/crud/: application.py  database_requests.py
app/models/: __init__.py  application.py
app/schemas/: ._application.py  application.py  database_validation_schemas.py
bewise/: Dockerfile  Makefile  pyproject.toml  setup.sh
bewise/app/: __init__.py  config.py  database.py  main.py
bewise/app/api/routers/: application.py
bewise/app/crud/: database_requests.py
bewise/app/models/: database_data_models.py
bewise/app/schemas/: database_validation_schemas.py
bewise/tests/: conftest.py  test_app.py
home_assignments/bewise/app/models/: database_data_models.py
tests/: conftest.py  test_app.py
