[project]
name = "bewise"
version = "0.1.0"
description = "Home Assignment"
authors = [
    {name = "Dmitrii Kormulev"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115,<1.0)",
    "pydantic (>=2.10,<3.0)",
    "uvicorn[standard] (>=0.34,<1.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<9.0"
ruff = "^0.9.2"
pytest-postgresql = "^6.1.1"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
psycopg = "^3.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
