[project]
name = "bewise"
version = "0.1.0"
description = "Home Assignment"
authors = [
    {name = "Dmitrii Kormulev"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115,<1.0)",
    "pydantic (>=2.10,<3.0)",
    "uvicorn[standard] (>=0.34,<1.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "redis (>=5.2.1,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<9.0"
ruff = "^0.9.2"
pytest-postgresql = "^6.1.1"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
psycopg = "^3.2.4"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
